Fixed Horizontal Scroll

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,7 +19,7 @@
   }
 }
 
-html , *{
+html {
   scroll-behavior: smooth;
 }
 
@@ -28,6 +28,14 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+html, body {
+  width: 100%;
+  margin: 0; /* Remove default margin */
+  padding: 0; /* Remove default padding */
+  overflow-x: hidden; /* Prevent horizontal scrolling */
+}
+
 
 .hero-bg{
   /* background-image: linear-gradient( 135deg, #FDEB71 10%, #F8D800 100%); */
